<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.forgotpassword.ForgetPasswordFragment">

    <LinearLayout
        android:id="@+id/enter_email_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_address"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/primary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_username_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_username_tiet"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:maxLines="1"
                android:paddingStart="@dimen/dp_0"
                android:paddingTop="@dimen/dp_30" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_password_bt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/submit" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp_15"
            android:visibility="gone"
            android:indeterminate="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_otp_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enter_otp_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/primary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_otp_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_otp_tiet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enter_otp_bt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/verify_otp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>