<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.auth.SignInFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_til"
        android:src="@mipmap/app_icon_round"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_tiet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/dp_0"
            android:paddingTop="@dimen/dp_30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintBottom_toTopOf="@id/signin_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_til"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintWidth_percent="0.8"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tiet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingStart="@dimen/dp_0"
            android:paddingTop="@dimen/dp_30" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signin_bt"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dp_15"
        android:text = "@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_til"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/signin_bt"
        app:layout_constraintEnd_toEndOf="@id/signin_bt"
        app:layout_constraintStart_toStartOf="@id/signin_bt"
        app:layout_constraintTop_toTopOf="@id/signin_bt" />
    
    <TextView
        android:id="@+id/forget_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintTop_toBottomOf="@id/signin_bt"/>

    <TextView
        android:id="@+id/sign_up_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_tv"
        android:text="@string/dont_have_an_account"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/forget_password_tv"/>

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_btn"
        app:layout_constraintStart_toEndOf="@id/sign_up_info"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:layout_marginTop="@dimen/dp_20"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/forget_password_tv"/>


</androidx.constraintlayout.widget.ConstraintLayout>