<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/CircleShapeAppearance"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="1dp"
        android:src="@drawable/swiko_banner"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_popup_inset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:paddingBottom="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/we_are_better_than_ever"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tv_info"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_version_no_longer_supported"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_info"
            android:layout_marginTop="30dp"
            android:id="@+id/tv_info_two"
            />

        <Button
            android:id="@+id/forgot_password_bt"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/update_new_version"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_two"
            android:layout_marginTop="30dp"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>