<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dark_blue_outline"
    android:minWidth="350dp"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/upload_using"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/camera_option_holder"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_dark_blue_outline"
        android:elevation="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gallery_option_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <ImageView
            android:id="@+id/camera_option"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="@dimen/dp_20"
            android:src="@drawable/img_camera" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="10dp"
            android:text="@string/camera"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gallery_option_holder"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_dark_blue_outline"
        android:elevation="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera_option_holder"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <ImageView
            android:id="@+id/gallery_option"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="@dimen/dp_20"
            android:src="@drawable/img_gallery" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="10dp"
            android:text="@string/gallery"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>