<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.forgotpassword.ResetPasswordFragment"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_til"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/enter_new_password"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:id="@+id/new_password_tiet"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reenter_password_til"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password_til"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/re_enter_password_tiet"
                android:hint="@string/re_enter_password"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:height="60dp"
            android:id="@+id/update_password_bt"
            app:layout_constraintTop_toBottomOf="@id/reenter_password_til"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/update">

        </Button>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/dp_15"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@+id/ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />



</androidx.constraintlayout.widget.ConstraintLayout>